--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^18.11.4",
     "@types/react": "18.0.21",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "babel-loader": "^8.2.4",
@@ -65,6 +66,7 @@
     "eslint-plugin-testing-library": "^5.2.0",
     "jest": "^27.5.1",
     "prettier": "^2.7.1",
+    "reassure": "^0.7.1",
     "storybook-addon-turbo-build": "^1.1.0",
     "storybook-dark-mode": "^1.1.2",
     "ts-jest": "^27.1.4",
