--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@typescript-eslint/parser": "^5.30.0",
     "babel-loader": "^8.2.4",
     "cypress": "^12.5.1",
+    "danger": "^11.2.3",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
