fixed some issues

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: 'yarn'
+          cache: 'npm'
 
       - name: Install and build
-        run: yarn install --force
+        run: npm install
 
       - name: Validate TypeScript
         run: npm run typecheck
