--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -1,18 +1,18 @@
-name: Build and Publish storybook to GitHub Pages
+# name: Build and Publish storybook to GitHub Pages
 
-on:
-  push:
-    branches:
-      - "master"
-jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.build-publish.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-    - id: build-publish
-      uses: bitovi/github-actions-react-to-ghp@v1.2.0
-      with:
-        path: dist/storybook
-        build_command: npm run storybook:build
+# on:
+#   push:
+#     branches:
+#       - "master"
+# jobs:
+#   deploy:
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.build-publish.outputs.page_url }}
+#     runs-on: ubuntu-latest
+#     steps:
+#     - id: build-publish
+#       uses: bitovi/github-actions-react-to-ghp@v1.2.0
+#       with:
+#         path: dist/storybook
+#         build_command: npm run storybook:build
