--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,6 +70,9 @@ jobs:
           node-version: 16.x
           cache: 'npm'
 
+      - name: Install and build
+        run: npm install
+
       - name: Reassure tests
         run: yarn --cwd packages/reassure-compare test
 
