--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     branches: ['**']
 
+permissions:
+  checks: write
+  contents: write
+
 jobs:
   performance:
     name: Performance test
