--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: ['**']
 
+permissions:
+  checks: write
+  contents: write
+  pull-requests: write
+  statuses: write
+
 jobs:
   build-validate-pref-tests:
     name: Test
@@ -59,6 +65,38 @@ jobs:
 
   performance:
     name: Performance test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: 'npm'
+
+      - name: Install and build
+        run: npm install
+
+      - name: Reassure tests
+        run: yarn --cwd packages/reassure-compare test
+
+      - name: Run performance tests
+        run: ./reassure-tests.sh
+
+      - name: Run Danger.js
+        run: yarn danger ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+  performance:
+    on:
+      pull_request:
+          branches: ['**']
+    name: Performance Tests
+    if: ${{ success() }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
