--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,6 +40,12 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: 'npm'
+
       - name: Install and build
         run: npm install
 
@@ -56,6 +62,11 @@ jobs:
     name: Performance test
     runs-on: ubuntu-latest
     steps:
+     - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: 'npm'
       - name: Install and build
         run: npm install
 
