--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,6 +40,9 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -62,6 +65,8 @@ jobs:
     name: Performance test
     runs-on: ubuntu-latest
     steps:
+     - name: Checkout
+        uses: actions/checkout@v3
      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
