--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -8,6 +8,9 @@ name: 'Dependency Review'
 on:
   pull_request:
     branches: ['**']
+  push:
+    branches:
+      - "master"
 
 permissions:
   contents: read
