--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.0.4",
     "@types/jest": "^27.4.1",
+    "@types/jest-axe": "^3.5.5",
     "@types/node": "^18.11.4",
     "@types/react": "18.0.21",
     "@types/testing-library__jest-dom": "^5.14.5",
@@ -69,7 +70,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.5.7",
     "eslint-plugin-testing-library": "^5.2.0",
-    "jest": "^27.5.1",
+    "jest": "^29.4.3",
+    "jest-axe": "^7.0.0",
+    "jest-environment-jsdom": "^29.4.3",
     "prettier": "^2.7.1",
     "reassure": "^0.7.1",
     "start-server-and-test": "1.14.0",
