--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "types": ["cypress", "node"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "cypress.config.ts"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx",  "**/*.cy.tsx", "cypress.d.ts"],
+  "exclude": ["node_modules", "cypress.config.ts"],
+
 }
